Bug 1558167 - Disable swizzling on macOS 10.15 AMD devices r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D48591

--HG--
extra : moz-landing-system : lando